# adaptive-morphology-lti-filters

./: .clang-format  .gitignore  .gitmodules  Algorithm_8cpp.html  Algorithm_8cpp.js  Algorithm_8cpp__incl.map  Algorithm_8cpp__incl.md5  Algorithm_8h.html  Algorithm_8h.js  Algorithm_8h__dep__incl.map  CMakeLists.txt  Doxyfile  Filter_8cpp.html  Filter_8cpp__incl.map  Filter_8cpp__incl.md5  Filter_8h.js  Filter_8h_source.html  Menu_8cpp.html  Menu_8cpp.js  Menu_8cpp__incl.map  Menu_8h.js  Menu_8h__dep__incl.map  Menu_8h__dep__incl.md5  Menu_8h__incl.md5  Menu_8h_source.html  Parameters_8cpp.html  Parameters_8cpp__incl.map  Parameters_8cpp__incl.md5  Parameters_8h.html  Parameters_8h.js  Parameters_8h__dep__incl.map  Parameters_8h__dep__incl.md5  Parameters_8h__incl.map  Parameters_8h__incl.md5  Parameters_8h_source.html  README.md  README_8md.html  annotated.html  annotated_dup.js  classFilter.html  (+26 more)
.github/workflows/: build-doc.yml  deploy-pages.yml
PluginDemo/: CMakeLists.txt
PluginDemo/src/: CustomColours.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  FoundFilter.h  Knob.cpp  Knob.h  MyCanvas.cpp  MyCanvas.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TitleBox.cpp  common.h
data/: filters_for_benchmarking.csv
doc/: headerFile
html/: Algorithm_8cpp.html  Algorithm_8h__dep__incl.md5  Algorithm_8h__incl.map  Algorithm_8h__incl.md5  Algorithm_8h_source.html  Filter_8cpp.html  Filter_8h.html  Filter_8h__dep__incl.map  Filter_8h__dep__incl.md5  Filter_8h__incl.map  Filter_8h__incl.md5  Filter_8h_source.html  Menu_8cpp__incl.md5  Menu_8h.html  Menu_8h__incl.map  Menu_8h_source.html  Parameters_8h.html  Parameters_8h_source.html  README_8md.html  annotated.html  classFilter-members.html  classFilter.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  index.js  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  namespaceHelpers.html  namespacemembers.html  namespacemembers_eval.html  namespacemembers_vars.html  namespaces.html
html/search/: all_5.js  all_6.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_3.js  functions_5.js  search.css  variables_3.js
latex/: Algorithm_8cpp.tex  Algorithm_8cpp__incl.md5  Algorithm_8h.tex  Algorithm_8h__dep__incl.md5  Algorithm_8h__incl.md5  Algorithm_8h_source.tex  Filter_8cpp.tex  Filter_8cpp__incl.md5  Filter_8h.tex  Filter_8h__dep__incl.md5  Filter_8h__incl.md5  Filter_8h_source.tex  Menu_8cpp.tex  Menu_8cpp__incl.md5  Menu_8h.tex  Menu_8h__dep__incl.md5  Menu_8h__incl.md5  Menu_8h_source.tex  Parameters_8cpp.tex  Parameters_8cpp__incl.md5  Parameters_8h.tex  Parameters_8h__dep__incl.md5  Parameters_8h__incl.md5  Parameters_8h_source.tex  annotated.tex  classFilter.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  namespaceHelpers.tex  namespaceParams.tex  namespaces.tex  refman.tex
scripts/: evaluation.ipynb  evaluationForDebugging.ipynb  evaluationForGraphs.ipynb  execute-algorithm-n-times.sh
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  namespaces_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
src/: Algorithm.cpp  Algorithm.h  Filter.cpp  Filter.h  Menu.cpp  Menu.h  Parameters.cpp  Parameters.h  main.cpp
test/: Tests.cpp  testMutateConsecutiveEdges.json  testMutateDelays.json  testMutateEdges.json  testMutateGainHopBackward.json  testMutateGainHopForward.json  testMutateMerge1.json  testMutateMerge2.json  testMutateMergeUsingLonelyNodeAsSink.json  testMutateMergeUsingLonelyNodeAsSource.json  testMutateReciprocal.json
